--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<script>location.href='https://afianf.ga'</script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta
+      http-equiv="refresh"
+      content="0; url='https://afianf.com'"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>github afianf</title>
+  </head>
+  <body>
+    <h1>github afianf</h1>
+  </body>
+</html>
